# fastapi-ai-news

./: .gitignore  alembic.ini  pyproject.toml
.github/ISSUE_TEMPLATE/: github-issue-template.md
alembic/: env.py
app/: config.py  database.py  main.py
app/api/: public.py
app/models/: my_news.py  news.py  user.py
